awesome-ingress-traefik/v1.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "profile-v1"
spec:
  selector:
    matchLabels:
      app: "v1"
  replicas: 1
  template:
    metadata:
      labels:
        app: "v1"
    spec:
      containers:
      - image: mak1806/custom-nginx:v1.0
        imagePullPolicy: Always
        name: "profile-v1"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: v1-service
  labels:
    app: profile-v1
spec:
  selector:
   app: v1
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
