awesome-ingress-traefik/v2.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "profile-v2"
spec:
  selector:
    matchLabels:
      app: "v2"
  replicas: 1
  template:
    metadata:
      labels:
        app: "v2"
    spec:
      containers:
      - image: mak1806/custom-nginx:v2.0
        imagePullPolicy: Always
        name: "profile-v2"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: v2-service
  labels:
    app: profile-v2
spec:
  selector:
   app: v2
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
