awesome-ingress-traefik/traefik-ingress-path-routing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-profile-app
  annotations:
     kubernetes.io/ingress.class: "traefik"
     traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
       paths:
         - path: /v1
           backend:
               serviceName: v1-service
               servicePort: 80
         - path: /v2
           backend:
               serviceName: v2-service 
               servicePort: 80
